Modified HTML and styles. Separated SearchPage on react components

--- a/public/styles/sass/styles.scss
+++ b/public/styles/sass/styles.scss
@@ -5,3 +5,6 @@
 
 // components
 @import "search-menu";
+
+// fonts
+@import "https://fonts.googleapis.com/css?family=Reenie+Beanie|Roboto:300&display=swap";
