--- a/public/styles/sass/_search-menu.scss
+++ b/public/styles/sass/_search-menu.scss
@@ -1,37 +1,39 @@
-.search-menu-wrapper {
-  display: block;
-  min-height: 40px;
-  width: 65vw;
-}
-
 .search-menu {
   height: 70px;
-}
 
-.search-menu-item {
-  min-height: 70px;
-  font-family: 'Roboto', sans-serif;
-  font-size: 1.5rem;
-}
+  &-wrapper {
+    display: block;
+    min-height: 40px;
+    width: 65vw;
+  }
 
-.search-menu-button {
-  padding-left: 4rem;
-  padding-right: 4rem;
-}
+  &-item {
+    min-height: 70px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 1.5rem;
+    border-radius: 40px;
+  }
 
-.search-menu-tags-input {
-  height: 70px;
-  font-family: 'Roboto', sans-serif;
-  font-size: 1.5rem;
-  background: transparent;
-  border: 0;
-}
+  &-button {
+    padding-left: 4rem;
+    padding-right: 4rem;
+  }
 
-.search-menu-tags-input-wrapper {
-  background: white;
-}
+  &-tags-input {
+    height: 70px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 1.5rem;
+    background: transparent;
+    border: 0;
 
-.search-menu-select {
-  padding-left: 2rem;
-  padding-right: 2rem;
+    &-wrapper {
+      border-radius: 0;
+      background: white;
+    }
+  }
+
+  &-select {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
 }
