--- a/public/styles/sass/styles.scss
+++ b/public/styles/sass/styles.scss
@@ -8,6 +8,7 @@
 // components
 @import "search-menu";
 @import "cards";
+@import "scrolldown";
 
 // fonts
 @import "https://fonts.googleapis.com/css?family=Reenie+Beanie|Roboto:300&display=swap";
